# s4

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.gpu  NOTICE  README.ja.md  README.md  SECURITY.md  SOCIAL_POSTS.md  about.toml  docker-compose.gpu.yml  docker-compose.yml  index.html
.clusterfuzzlite/: Dockerfile  build.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/compat-roundtrip/: action.yml
.github/workflows/: aws-e2e.yml  aws-kms-e2e.yml  bench.yml  cflite_pr.yml  ci-close-resolved.yml  ci.yml  compat-matrix.yml  docker-smoke.yml  docker.yml  fuzz-nightly.yml
.review/: codex-prelaunch-findings.md  codex-v0.8.6-findings.md
benches/cold-parquet/: .gitignore  cp_bench.py
benches/cold-parquet/results/: cold_parquet.json
benches/comparison/: README.md  docker-compose.yml  garage.toml  result-2026-05-13.csv  run.sh
benches/elasticsearch-frozen/: README.md  breakeven.py  build_indices.sh  create_indices.sh  mapping.json  phase_a_snapshots.py  phase_b1_rtt.py  phase_b1_rtt.sh  phase_b2_sidecar.py  phase_b4_ha.sh  phase_b4_ha_failover.py  phase_b_frozen.py  phase_c_restore.py  phase_d_recompact.sh
benches/elasticsearch-frozen/results/: REVISION-NOTES.md  breakeven.json  ha-failover.json  phase_a.json  phase_b.json  phase_c.json  phase_d_recompact-evidence.txt  recompact-concurrency.json  rtt-injection.json  sidecar-overhead.json  (+1 more)
benches/grafana-loki/: .gitignore  README.md  loki_bench.py  loki_ingest.py
benches/kafka-tiered/: .gitignore  README.md  gen_payloads.py  kafka_bench.py
benches/opensearch-searchable/: README.md  gen_and_index.py  os_build_indices.sh  os_create_indices.sh  os_mapping.json  os_phase_full.py
charts/s4/: .helmignore  Chart.yaml  README.md  values.yaml
contrib/grafana/: s4-savings-dashboard.json
crates/s3s/: Cargo.toml
crates/s3s-aws/: Cargo.toml
crates/s4-codec/: Cargo.toml  build.rs
crates/s4-codec-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/s4-codec-py/src/: lib.rs
crates/s4-codec-py/tests/: test_binding.py  version_matches_workspace.rs
crates/s4-codec-wasm/: .gitignore  Cargo.toml  README.md  package.json
crates/s4-codec-wasm/examples/web-demo/: index.html
crates/s4-codec-wasm/src/: lib.rs
crates/s4-codec-wasm/tests/: panic_hook.rs  version_matches_workspace.rs
crates/s4-codec/benches/: codec_roundtrip.rs  frame_codec.rs  gpu_small_batch.rs  index_codec.rs
crates/s4-codec/examples/: bench_codecs.rs  bench_gpu_select.rs
crates/s4-codec/src/: cpu_gzip.rs  cpu_zstd.rs  cpu_zstd_dict.rs  dietgpu.rs  dispatcher.rs  index.rs  lib.rs  multipart.rs  nvcomp.rs  nvcomp_batched.rs  passthrough.rs  registry.rs
crates/s4-codec/src/cuda_kernels/: nvcomp_hlif_shim.cpp
crates/s4-codec/src/ferro_compress/: algo.rs  bitcomp_device.rs  error.rs  mod.rs  nvcomp.rs  nvcomp_hlif.rs  slab_alloc.rs
crates/s4-codec/src/ferro_compress/nvcomp_sys/: cuda.rs  mod.rs  nvcomp.rs
crates/s4-codec/src/gpu_select/: mod.rs
crates/s4-codec/tests/: cli_decode.rs  fuzz_advanced.rs  fuzz_bolero.rs  fuzz_canary.rs  fuzz_parsers.proptest-regressions  fuzz_parsers.rs
crates/s4-codec/tests/__fuzz__/cpu_zstd_decompress_bolero/crashes/: oom-e75048a37cde2a2386006c3d785589e16c0bb365
crates/s4-config/: Cargo.toml
crates/s4-config/src/: lib.rs
crates/s4-server/: Cargo.toml
crates/s4-server/examples/: bench_framed_overhead.rs  bench_pipeline.rs  bench_sse_throughput.rs
crates/s4-server/src/: access_log.rs  acme.rs  audit_log.rs  blob.rs  cors.rs  dict.rs  estimate.rs  frame_stream.rs  gpu_batch.rs  inventory.rs  kms.rs  ledger.rs  lib.rs  lifecycle.rs  lock_recovery.rs  main.rs  maintain.rs  marketplace.rs  metrics.rs  mfa.rs  migrate.rs  mpu_durable.rs  multipart_state.rs  notifications.rs  object_lock.rs  parquet_recompact.rs  policy.rs  rate_limit.rs  recompact.rs  repair.rs  replication.rs  routing.rs  select.rs  service.rs  service_arc.rs  sigv4a.rs  sse.rs  state_loader.rs  streaming.rs  streaming_checksum.rs  (+3 more)
crates/s4-server/tests/: aws_e2e.rs  chaos.rs  dict_minio.rs  dict_ops_minio.rs  estimate_minio.rs  feature_e2e.rs  fuzz_bolero.rs  fuzz_server.rs  gpu_batch_e2e.rs  gpu_streaming.rs  http_e2e.rs  ledger_minio.rs  maintain_minio.rs  migrate_minio.rs  minio_e2e.rs  multipart_audit_71.rs  multipart_complete_idempotent.rs  multipart_durable_state.rs  multipart_e2e.rs  multipart_stream_oom.rs  recompact_minio.rs  roundtrip.rs  sidecar_repair_via_minio.rs  tls_e2e.rs
dev/bench/: data.js
docs/: README.md  THIRD_PARTY_LICENSES.html  architecture.md  benchmarks.md  compatibility.md  configuration.md  deployment.md  features.md  gpu.md  install.md  observability.md  orphan-sidecar-recovery.md  savings.md  stability.md  status.md  storage-class-transitions.md  testing.md  trust.md  wire-format.md
docs/marketplace/: listing-fields.txt  listing.md  metered-savings-design.md  metering.md
docs/ops/: dictionaries.md  maintenance.md  repair.md  runbook.md
docs/security/: cargo-audit-ignores.md  overview.md  sse-partial-fetch-constraint.md  streaming-checksum-coverage.md  threat-model.md
docs/use-cases/: cold-parquet.md  elasticsearch-frozen-tier.md  grafana-loki-chunks.md  kafka-tiered-storage.md  opensearch-searchable-snapshots.md  s3-compatible-backends.md
infra/aws-e2e/: README.md  main.tf  variables.tf
infra/cloudformation/: marketplace-quicklaunch-cpu.yaml  marketplace-quicklaunch-gpu.yaml
python/s4fs/: README.md  pyproject.toml
python/s4fs/src/s4fs/: __init__.py  core.py
python/s4fs/tests/: conftest.py  datagen.py  test_e2e_minio.py  test_e2e_s4fs_write.py  test_s4fs_unit.py
python/s4fs/tests/fixtures/: dict_event.body  dict_event.meta.json  dict_event.orig  generate_fixtures.py  multi_zstd.body  multi_zstd.meta.json  multi_zstd.s4index  parquet_zstd.body  parquet_zstd.meta.json  parquet_zstd.orig  raw.orig  text_gzip.body  text_gzip.meta.json  text_gzip.orig  text_zstd.body  text_zstd.meta.json
scripts/: bootstrap-aws-e2e.sh
scripts/soak/: run.sh
(+80 files in other folders)
