[workspace]
resolver = "2"
members = [
    "crates/s4-server",
    "crates/s4-codec",
    "crates/s4-codec/vendor/ferro-compress",
    "crates/s4-config",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.92"
license = "Proprietary"
authors = ["abyo software (masumi-ryugo) <abyo.software@gmail.com>"]
repository = "https://github.com/abyo-software/s4"

[workspace.dependencies]
s3s = "0.13"
s3s-aws = "0.13"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.124"
aws-credential-types = "1"
tokio = { version = "1", features = ["full"] }
hyper = "1.8"
hyper-util = { version = "0.1", features = [
    "server-auto",
    "server-graceful",
    "http1",
    "http2",
    "tokio",
] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
crc32c = "0.6"
zstd = "0.13"
futures = "0.3"
thiserror = "2"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
tokio-util = { version = "0.7", features = ["io"] }
pin-project-lite = "0.2"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "grpc-tonic"] }
tracing-opentelemetry = "0.32"
proptest = "1"
bolero = "0.13"

[workspace.lints.rust]
unsafe_code = "deny"
