[workspace]
resolver = "2"
members = [
    "crates/s4-server",
    "crates/s4-codec",
    "crates/s4-config",
    "crates/s4-codec-py",
    "crates/s4-codec-wasm",
]

[workspace.package]
version = "0.8.20"
edition = "2024"
rust-version = "1.92"
license = "Apache-2.0"
authors = ["abyo software 合同会社", "masumi-ryugo <abyo.software@gmail.com>"]
repository = "https://github.com/abyo-software/s4"
homepage = "https://github.com/abyo-software/s4"
documentation = "https://github.com/abyo-software/s4#readme"
readme = "README.md"
description = "S4 — Squished S3. GPU-accelerated transparent compression S3-compatible storage gateway."
keywords = ["s3", "compression", "gpu", "nvcomp", "zstd"]
categories = ["compression", "network-programming", "web-programming"]

[workspace.dependencies]
s3s = "0.13"
s3s-aws = "0.13"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.124"
aws-credential-types = "1"
tokio = { version = "1", features = ["full"] }
hyper = "1.8"
hyper-util = { version = "0.1", features = [
    "server-auto",
    "server-graceful",
    "http1",
    "http2",
    "tokio",
] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
crc32c = "0.6"
zstd = "0.13"
futures = "0.3"
thiserror = "2"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
tokio-util = { version = "0.7", features = ["io"] }
pin-project-lite = "0.2"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "grpc-tonic"] }
tracing-opentelemetry = "0.32"
proptest = "1"
bolero = "0.13"

[workspace.lints.rust]
unsafe_code = "deny"

# `cargo bolero test --engine libfuzzer` defaults to `--profile fuzz`. Inherit
# from `release` (optimized, no debug-asserts) but force codegen-units=1 (bolero
# README warns of compilation bugs otherwise) and keep debug info so libfuzzer
# crash artifacts symbolicate.
[profile.fuzz]
inherits = "release"
codegen-units = 1
debug = true
overflow-checks = true
