[workspace]
resolver = "2"
members = [
    "crates/s4-server",
    "crates/s4-codec",
    "crates/s4-config",
    "crates/s4-codec-py",
    "crates/s4-codec-wasm",
    "crates/s3s",
    "crates/s3s-aws",
]
# v1.4.1: s3s 0.13.0 is vendored under crates/s3s/ + crates/s3s-aws/ as a
# fork (0.13.0-s4.1) so we can add a NoVerify signature-verification mode.
# Upstream s3s::auth::SimpleAuth verifies every SigV4 signature against a
# single registered AKID/secret pair, which makes the gateway reject any
# external client whose access key doesn't match the gateway's IMDS-derived
# backend credentials. The vendored fork exposes
# `S3ServiceBuilder::set_skip_signature_verification` and a fresh
# `AcceptAnyAuth` provider that S4 uses by default; the binary remains a
# trusted-network gateway (the same posture every other S3-compat gateway
# ships in by default).

[workspace.package]
version = "1.4.1"
edition = "2024"
rust-version = "1.92"
license = "Apache-2.0"
authors = ["abyo software 合同会社", "masumi-ryugo <abyo.software@gmail.com>"]
repository = "https://github.com/abyo-software/s4"
homepage = "https://github.com/abyo-software/s4"
documentation = "https://github.com/abyo-software/s4#readme"
readme = "README.md"
description = "S4 — Squished S3. GPU-accelerated transparent compression S3-compatible storage gateway."
keywords = ["s3", "compression", "gpu", "nvcomp", "zstd"]
categories = ["compression", "network-programming", "web-programming"]

[workspace.dependencies]
s3s = { path = "crates/s3s", version = "0.13.0-s4.1", default-features = false }
s3s-aws = { path = "crates/s3s-aws", version = "0.13.0-s4.1", default-features = false }
aws-config = { version = "1", features = ["behavior-version-latest"] }
# default-features = false drops the legacy `rustls` feature, which pulls the
# EOL rustls 0.21 / rustls-webpki 0.101 chain (RUSTSEC-2026-0098/0099/0104,
# issue #91). The remaining features mirror the crate's defaults minus that
# legacy TLS stack; TLS is served by `default-https-client` (rustls 0.23).
aws-sdk-s3 = { version = "1.124", default-features = false, features = [
    "sigv4a",
    "http-1x",
    "default-https-client",
    "rt-tokio",
] }
aws-credential-types = "1"
tokio = { version = "1", features = ["full"] }
hyper = "1.8"
hyper-util = { version = "0.1", features = [
    "server-auto",
    "server-graceful",
    "http1",
    "http2",
    "tokio",
] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
crc32c = "0.6"
zstd = "0.13"
futures = "0.3"
thiserror = "2"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
tokio-util = { version = "0.7", features = ["io"] }
pin-project-lite = "0.2"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "grpc-tonic"] }
tracing-opentelemetry = "0.32"
proptest = "1"
bolero = "0.13"
# Parquet-aware recompaction (optional `parquet-recompact` feature on s4-server):
# read a Parquet object and re-encode its column chunks to zstd, keeping the
# output natively readable by pyarrow / Spark / Trino / DuckDB. Pulls the Arrow
# tree, so it stays optional and off by default.
parquet = { version = "55", default-features = false, features = ["arrow", "zstd", "snap", "lz4", "brotli", "flate2"] }
arrow = { version = "55", default-features = false, features = ["prettyprint"] }

[workspace.lints.rust]
unsafe_code = "deny"

# `cargo bolero test --engine libfuzzer` defaults to `--profile fuzz`. Inherit
# from `release` (optimized, no debug-asserts) but force codegen-units=1 (bolero
# README warns of compilation bugs otherwise) and keep debug info so libfuzzer
# crash artifacts symbolicate.
[profile.fuzz]
inherits = "release"
codegen-units = 1
debug = true
overflow-checks = true
