# `s4-codec-wasm` — browser-side decoder for S4F2-framed objects (v0.4 #24).
#
# Why a separate crate (instead of a `wasm` feature on `s4-codec`):
#   - the workspace `tokio = "full"` and `s3s` / `aws-sdk-s3` deps don't
#     compile to `wasm32-unknown-unknown`;
#   - the browser only ever decodes (read path), so no need to drag the GPU
#     codecs (nvCOMP / DietGPU) or the async runtime through `wasm-bindgen`.
#
# Build: `cargo build --release --target wasm32-unknown-unknown -p s4-codec-wasm`
# or, with `wasm-pack` installed: `wasm-pack build --release --target web`.

[package]
name = "s4-codec-wasm"
# v0.8.5 #82 C-2: inherit version from `[workspace.package]` so npm publishes
# under the workspace's actual semver (was hard-coded "0.1.0", which would
# have shipped a misleadingly-pre-release bundle for a v0.8.x workspace).
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Browser-side WASM decoder for S4F2-framed objects (CPU codecs only — zstd / gzip / passthrough)."
publish = false  # npm publish is the distribution channel; crates.io publish disabled

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# `s4-codec` is the source of truth for `CodecKind`, the S4F2 frame format
# (`multipart::FrameIter`), and the `*_blocking` decode helpers added in this
# same change. Pinning by path keeps in-repo changes aligned; pinning by
# version protects against accidental dep skew when published.
s4-codec = { path = "../s4-codec", version = "0.8.7" }
bytes = { workspace = true }
crc32c = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
# v0.8.5 #82 C-3: install a panic hook on module load (see `lib.rs`'s
# `s4_codec_wasm_init`) so a codec panic surfaces as `console.error` in the
# browser instead of silently poisoning the WASM linear memory and killing
# the JS context with no diagnostic.
console_error_panic_hook = "0.1"

[dev-dependencies]
# v0.8.5 #82: parse `CARGO_PKG_VERSION` in `tests/version_matches_workspace.rs`
# to assert the binding's version is a real workspace-inherited semver
# (>= 0.8.0), not the legacy hard-coded "0.1.0".
semver = "1"
# Host-target smoke test for the panic-hook install path. (Real wasm-target
# behaviour requires `wasm-pack test --node`; see `tests/panic_hook.rs`.)
wasm-bindgen-test = "0.3"
