[package]
name = "s4-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "S4 (Squished S3) — pluggable GPU/CPU compression codec layer (nvCOMP zstd / Bitcomp, CPU zstd)."
build = "build.rs"
include = [
    "src/**/*.rs",
    "src/cuda_kernels/*.cpp",
    "build.rs",
    "Cargo.toml",
    "LICENSE",
    "NOTICE",
    "README.md",
]

[lints]
workspace = true

[features]
default = []
# Opt-in GPU backend via NVIDIA nvCOMP. Requires CUDA toolchain (nvcc) and
# NVCOMP_HOME env var pointing to an extracted nvCOMP redist tarball at build
# time, plus a CUDA-capable GPU at runtime. Without this feature, S4 runs
# CPU-only (cpu_zstd / passthrough).
nvcomp-gpu = []

[dependencies]
async-trait.workspace = true
bytes.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
crc32c.workspace = true
zstd.workspace = true
# tokio: only `rt` is needed at runtime (spawn_blocking + JoinError). The
# workspace dep is `features = ["full"]` which drags in mio / sockets / signal
# and prevents `s4-codec-wasm` (a path-dep on this crate) from building for
# `wasm32-unknown-unknown`. Pin a slim feature set here while still using the
# workspace version. Server / nvcomp consumers compose their own full set in
# their own Cargo.toml so this doesn't disable anything they need.
tokio = { version = "1", default-features = false, features = ["rt"] }
thiserror.workspace = true
flate2 = "1"

[dev-dependencies]
# Tests use `#[tokio::test]` (= `macros` + `rt`).
tokio = { version = "1", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
proptest.workspace = true
bolero.workspace = true
