[package]
name = "s4-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "S4 (Squished S3) — config types and loader for the GPU-accelerated S3 gateway."
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "NOTICE",
    "README.md",
]

[lints]
workspace = true

[dependencies]
serde.workspace = true
anyhow.workspace = true
