[package]
name = "s4-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "S4 — Squished S3 — GPU-accelerated transparent compression S3-compatible storage gateway (cargo install s4-server installs the `s4` binary)."
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "NOTICE",
    "README.md",
]

[lints]
workspace = true

[features]
default = []
# Enable GPU compression via nvCOMP. Requires CUDA + NVCOMP_HOME at build time
# and a CUDA-capable GPU at runtime. Propagates to s4-codec/nvcomp-gpu.
nvcomp-gpu = ["s4-codec/nvcomp-gpu"]

[[bin]]
name = "s4"
path = "src/main.rs"

[dependencies]
s3s.workspace = true
s3s-aws.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-credential-types.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
thiserror.workspace = true
http = "1"
async-compression.workspace = true
tokio-util.workspace = true
crc32c.workspace = true
pin-project-lite.workspace = true
http-body-util = "0.1"
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true

s4-codec = { path = "../s4-codec", version = "0.1.0" }
s4-config = { path = "../s4-config", version = "0.1.0" }

[dev-dependencies]
tempfile = "3"
http = "1"
testcontainers-modules = { version = "0.14", features = ["minio"] }
zstd = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
metrics-exporter-prometheus.workspace = true
proptest.workspace = true
