[package]
name = "s4-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "S4 — Squished S3 — GPU-accelerated transparent compression S3-compatible storage gateway (cargo install s4-server installs the `s4` binary)."
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "NOTICE",
    "README.md",
]

[lints]
workspace = true

[features]
default = []
# Enable GPU compression via nvCOMP. Requires CUDA + NVCOMP_HOME at build time
# and a CUDA-capable GPU at runtime. Propagates to s4-codec/nvcomp-gpu.
nvcomp-gpu = ["s4-codec/nvcomp-gpu"]

[[bin]]
name = "s4"
path = "src/main.rs"

[dependencies]
s3s.workspace = true
s3s-aws.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-credential-types.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
anyhow.workspace = true
bytes.workspace = true
serde.workspace = true
futures.workspace = true
thiserror.workspace = true
http = "1"
async-compression.workspace = true
tokio-util.workspace = true
crc32c.workspace = true
pin-project-lite.workspace = true
http-body-util = "0.1"
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = "2"
serde_json = "1"
arc-swap = "1"
rustls-acme = { version = "0.15", default-features = false, features = ["ring", "webpki-roots"] }
governor = "0.10"
dashmap = "6"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
# v0.5 #27: SSE-C key fingerprinting. AWS S3 SSE-C uses MD5 of the
# customer key (sent as `x-amz-server-side-encryption-customer-key-MD5`)
# as a non-secret tag the server stores to verify GETs supply the same
# key. MD5 is fine here — it's a fingerprint, not a security primitive.
md-5 = "0.10"
# v0.5 #33: SigV4a (asymmetric ECDSA-P256-SHA256) signature verification.
# Used only for verifying SigV4a-signed S3 requests; key issuance / signing
# is out of scope (operators load PEM-encoded P-256 public keys via
# `--sigv4a-credentials <DIR>`).
p256 = { version = "0.13", features = ["ecdsa", "std", "pem", "pkcs8"] }
ecdsa = "0.16"

s4-codec = { path = "../s4-codec", version = "0.4.0" }
s4-config = { path = "../s4-config", version = "0.4.0" }

[dev-dependencies]
tempfile = "3"
http = "1"
testcontainers-modules = { version = "0.14", features = ["minio"] }
zstd = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
metrics-exporter-prometheus.workspace = true
proptest.workspace = true
rcgen = "0.13"
